--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -5,6 +5,7 @@
     android:layout_margin="15dp">
 
     <TextView
+        android:id="@+id/date_text"
         android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
