--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="城市名"
+        android:textColor="#fff"
         android:layout_centerInParent="true" />
 
     <TextView
